mType/tests/testFiles/error/error/nestedClassInInterface.mt
interface A {
    function test(): void;

    class B {
        int y;
    }
}
